Fixed component naming Fixed toast text wrap on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,5 +41,5 @@
 }
 
 .breakNewline {
-    white-space: pre;
+    white-space: pre-wrap;
 }
